--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
 
     <main>
@@ -58,6 +57,8 @@
             </p>
           </li>
         </ul>
+      </section>
+      <section>
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
@@ -84,7 +85,7 @@
               alt="Працівник – Дизайнер"
               width="270"
             />
-            <h4>Ігор Дем'яненко</h4>
+            <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -93,7 +94,7 @@
               alt="Працівник – фронтент розробник"
               width="270"
             />
-            <h4>Ольга Рєпіна</h4>
+            <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -102,7 +103,7 @@
               alt="Працівник – маркетолог"
               width="270"
             />
-            <h4>Микола Тарасов</h4>
+            <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -111,7 +112,7 @@
               alt="Працівник – дизайнер інтерфесу"
               width="270"
             />
-            <h4>Михайло Єрмаков</h4>
+            <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
